--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.5.1+cu118
+torchvision==0.16.1+cu118
+torchaudio==2.0.2+cu118
 matplotlib==3.7.0
 numpy==1.23.5
 pandas==1.5.3
